[package]
name = "arrowalloy"
version = "0.0.2"
authors = ["Rickard Ernst Björn Lundin <rickard@ignalina.dk>"]
homepage = "https://github.com/Ignalina/alloy.rs"
license = "MIT-0"
keywords = ["alloy", "go", "rust","bridge","arrow"]
description = "Rust trait for arrow driven implementation"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = "0.14.2"
